--- a/packages/ipfs/package.json
+++ b/packages/ipfs/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "ipfs-resolver",
+  "name": "@eth-samba/id",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "ts-node src/index.ts"
-  },
+  "main": "src/index.ts",
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -14,11 +12,7 @@
     "@fleekxyz/sdk": "^0.7.3"
   },
   "devDependencies": {
-    "@types/node": ">=12.0.0",
-    "dotenv": "^16.0.1",
     "fleek": "^2.1.1",
-    "ts-node": ">=8.0.0",
-    "tsx": "^4.7.1",
     "typescript": "^5.4.3"
   }
 }
