--- a/packages/app/.env.example
+++ b/packages/app/.env.example
@@ -1,2 +1,2 @@
-VITE_WALLET_CONNECT_PROJECT_ID=PROJECT_ID
-VITE_BASE_URL=BASE_URL
+NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=PROJECT_ID
+NEXT_PUBLIC_BASE_URL=localhost:5173
