feat(ipfs): create hook to upload file in IPFS and create server API

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,26 +11,32 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@fleekxyz/cli": "^0.7.3",
+    "@fleekxyz/sdk": "^0.7.3",
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-router": "^1.22.3",
     "@tanstack/router-devtools": "^1.22.3",
+    "@vercel/blob": "^0.22.1",
     "@web3modal/wagmi": "^4.1.1",
+    "multiparty": "^4.2.3",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4",
     "viem": "^2.8.18",
     "wagmi": "^2.5.12"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/multiparty": "^0.0.36",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "@types/react-dom": "^18",
-    "eslint-config-next": "14.1.4",
     "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.4",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6"
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "fleek": "^2.1.1",
+    "typescript": "^5"
   }
 }
