--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,22 +15,24 @@
     "@tanstack/react-router": "^1.22.3",
     "@tanstack/router-devtools": "^1.22.3",
     "@web3modal/wagmi": "^4.1.1",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4",
+    "react-hook-form": "^7.51.1",
+    "react-icons": "^5.0.1",
     "viem": "^2.8.18",
     "wagmi": "^2.5.12"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "@types/react-dom": "^18",
-    "eslint-config-next": "14.1.4",
     "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.4",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6"
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "typescript": "^5"
   }
 }
