--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -19,12 +19,13 @@
     "@tanstack/react-router": "^1.22.3",
     "@tanstack/router-devtools": "^1.22.3",
     "@web3modal/wagmi": "^4.1.1",
-    "react-hook-form": "^7.51.1",
-    "react-icons": "^5.0.1",
+    "framer-motion": "^11.0.20",
     "multiparty": "^4.2.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.1",
+    "react-icons": "^5.0.1",
     "viem": "^2.8.18",
     "wagmi": "^2.5.12"
   },
