--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
     "viem": "^2.8.18",
     "wagmi": "^2.5.12"
   },
